--- a/openfisca_barcelona/tests/benefits/GE-051-00.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-00.yaml
@@ -6,6 +6,8 @@
      adults: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
+  families_fins_a_segon_grau:
+    familiars: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: '1961-01-15'
@@ -22,4 +24,4 @@
      percep_prestacions_incompatibles_amb_la_feina: false
      beneficiari_ajuts_per_violencia_de_genere: false
   output_variables:
-     GE_051_00_mensual: [ 426 ]
+     GE_051_00_mensual: [ 430 ]
