--- a/openfisca_barcelona/tests/benefits/GG-270.yaml
+++ b/openfisca_barcelona/tests/benefits/GG-270.yaml
@@ -4,23 +4,26 @@
   absolute_error_margin: false
   families:
      adults: ["adult"]
+     tipus_familia_monoparental: nop
   unitats_de_convivencia:
      persones_que_conviuen: ["adult"]
+  families_fins_a_segon_grau:
+    familiars: ["adult"]
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_bruts:
-      2016: 6348
+     ingressos_bruts_ultims_sis_mesos: 1500
      es_orfe_dels_dos_progenitors: false
      es_victima_de_violencia_masclista: false
      es_divorciada_de_familia_reagrupada: false
      porta_dos_anys_o_mes_empadronat_a_catalunya: true
+     situacio_laboral: aturat
      beneficiari_de_prestacio_residencial: false
      ingressat_en_centre_penitenciari: false
      en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: false
      inscrit_com_a_demandant_docupacio: true
   output_variables:
-     GG_270_mensual: [ 100 ]
+     GG_270_mensual: [ 314 ]
 
 
 - name: "Persona amb ingressos superiors al limit no reb l'ajuda"
@@ -29,17 +32,20 @@
   absolute_error_margin: false
   families:
      adults: ["adult"]
+     tipus_familia_monoparental: nop
   unitats_de_convivencia:
      persones_que_conviuen: ["adult"]
+  families_fins_a_segon_grau:
+    familiars: ["adult"]
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_bruts:
-      2016: 6372
+     ingressos_bruts_ultims_sis_mesos: 6372
      es_orfe_dels_dos_progenitors: false
      es_victima_de_violencia_masclista: false
      es_divorciada_de_familia_reagrupada: false
      porta_dos_anys_o_mes_empadronat_a_catalunya: true
+     situacio_laboral: aturat
      beneficiari_de_prestacio_residencial: false
      ingressat_en_centre_penitenciari: false
      en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: false
@@ -54,17 +60,20 @@
   absolute_error_margin: false
   families:
      adults: ["adult"]
+     tipus_familia_monoparental: nop
   unitats_de_convivencia:
      persones_que_conviuen: ["adult"]
+  families_fins_a_segon_grau:
+    familiars: ["adult"]
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_bruts:
-      2016: 6348
+     ingressos_bruts_ultims_sis_mesos: 3383
      es_orfe_dels_dos_progenitors: false
      es_victima_de_violencia_masclista: false
      es_divorciada_de_familia_reagrupada: false
      porta_dos_anys_o_mes_empadronat_a_catalunya: false
+     situacio_laboral: aturat
      beneficiari_de_prestacio_residencial: false
      ingressat_en_centre_penitenciari: false
      en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: false
@@ -79,17 +88,20 @@
   absolute_error_margin: false
   families:
      adults: ["adult"]
+     tipus_familia_monoparental: nop
   unitats_de_convivencia:
      persones_que_conviuen: ["adult"]
+  families_fins_a_segon_grau:
+    familiars: ["adult"]
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_bruts:
-      2016: 6348
+     ingressos_bruts_ultims_sis_mesos: 3383
      es_orfe_dels_dos_progenitors: false
      es_victima_de_violencia_masclista: false
      es_divorciada_de_familia_reagrupada: false
      porta_dos_anys_o_mes_empadronat_a_catalunya: true
+     situacio_laboral: aturat
      beneficiari_de_prestacio_residencial: true
      ingressat_en_centre_penitenciari: false
      en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: false
@@ -104,17 +116,20 @@
   absolute_error_margin: false
   families:
      adults: ["adult"]
+     tipus_familia_monoparental: nop
   unitats_de_convivencia:
      persones_que_conviuen: ["adult"]
+  families_fins_a_segon_grau:
+    familiars: ["adult"]
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_bruts:
-      2016: 6348
+     ingressos_bruts_ultims_sis_mesos: 3383
      es_orfe_dels_dos_progenitors: false
      es_victima_de_violencia_masclista: false
      es_divorciada_de_familia_reagrupada: false
      porta_dos_anys_o_mes_empadronat_a_catalunya: true
+     situacio_laboral: aturat
      beneficiari_de_prestacio_residencial: false
      ingressat_en_centre_penitenciari: true
      en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: false
@@ -128,17 +143,20 @@
   absolute_error_margin: false
   families:
      adults: ["adult"]
+     tipus_familia_monoparental: nop
   unitats_de_convivencia:
      persones_que_conviuen: ["adult"]
+  families_fins_a_segon_grau:
+    familiars: ["adult"]
   persones:
    - id: "adult"
      data_naixement: '1961-01-15'
-     ingressos_bruts:
-      2016: 6348
+     ingressos_bruts_ultims_sis_mesos: 3383
      es_orfe_dels_dos_progenitors: false
      es_victima_de_violencia_masclista: false
      es_divorciada_de_familia_reagrupada: false
      porta_dos_anys_o_mes_empadronat_a_catalunya: true
+     situacio_laboral: aturat
      beneficiari_de_prestacio_residencial: false
      ingressat_en_centre_penitenciari: false
      en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: true
@@ -154,26 +172,29 @@
   families:
      adults: ["adult"]
      menors: ["menor_discapacitat"]
+     tipus_familia_monoparental: general
   unitats_de_convivencia:
      persones_que_conviuen: ["adult", "menor_discapacitat"]
+  families_fins_a_segon_grau:
+    familiars: ["adult", "menor_discapacitat"]
   persones:
    - id: "adult"
      data_naixement: '1998-03-15'
-     ingressos_bruts:
-      2016: 6348
+     ingressos_bruts_ultims_sis_mesos: 1500
      es_orfe_dels_dos_progenitors: false
      es_victima_de_violencia_masclista: false
      es_divorciada_de_familia_reagrupada: false
      porta_dos_anys_o_mes_empadronat_a_catalunya: true
      beneficiari_de_prestacio_residencial: false
      ingressat_en_centre_penitenciari: false
+     situacio_laboral: aturat
      en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: false
      inscrit_com_a_demandant_docupacio: true
    - id: "menor_discapacitat"
      data_naixement: '2008-03-15'
      grau_discapacitat: 33
   output_variables:
-     GG_270_mensual: [ 100, 0 ]
+     GG_270_mensual: [ 661, 0 ]
 
 
 - name: "Persona menor de 23 victima de violencia de genere reb l'ajuda"
@@ -182,23 +203,26 @@
   absolute_error_margin: false
   families:
      adults: ["adult"]
+     tipus_familia_monoparental: nop
   unitats_de_convivencia:
      persones_que_conviuen: ["adult"]
+  families_fins_a_segon_grau:
+    familiars: ["adult"]
   persones:
    - id: "adult"
      data_naixement: '1998-03-15'
-     ingressos_bruts:
-      2016: 6348
+     ingressos_bruts_ultims_sis_mesos: 1500
      es_orfe_dels_dos_progenitors: false
      es_victima_de_violencia_masclista: true
      es_divorciada_de_familia_reagrupada: false
      porta_dos_anys_o_mes_empadronat_a_catalunya: true
      beneficiari_de_prestacio_residencial: false
      ingressat_en_centre_penitenciari: false
+     situacio_laboral: aturat
      en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: false
      inscrit_com_a_demandant_docupacio: true
   output_variables:
-     GG_270_mensual: [ 100 ]
+     GG_270_mensual: [ 314 ]
 
 
 - name: "Persona menor de 23 orfena dels dos progenitors reb l'ajuda"
@@ -207,23 +231,26 @@
   absolute_error_margin: false
   families:
      adults: ["adult"]
+     tipus_familia_monoparental: nop
   unitats_de_convivencia:
      persones_que_conviuen: ["adult"]
+  families_fins_a_segon_grau:
+    familiars: ["adult"]
   persones:
    - id: "adult"
      data_naixement: '1998-03-15'
-     ingressos_bruts:
-      2016: 6348
+     ingressos_bruts_ultims_sis_mesos: 1500
      es_orfe_dels_dos_progenitors: true
      es_victima_de_violencia_masclista: false
      es_divorciada_de_familia_reagrupada: false
      porta_dos_anys_o_mes_empadronat_a_catalunya: true
      beneficiari_de_prestacio_residencial: false
      ingressat_en_centre_penitenciari: false
+     situacio_laboral: aturat
      en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: false
      inscrit_com_a_demandant_docupacio: true
   output_variables:
-     GG_270_mensual: [ 100 ]
+     GG_270_mensual: [ 314 ]
 
 
 - name: "Persona no empadronada i sense permis pero divorciada de familia reagrupada reb l'ajuda"
@@ -233,13 +260,15 @@
   families:
      adults: ["adult"]
      menors: ["menor_discapacitat"]
+     tipus_familia_monoparental: nop
   unitats_de_convivencia:
      persones_que_conviuen: ["adult", "menor_discapacitat"]
+  families_fins_a_segon_grau:
+    familiars: ["adult", "menor_discapacitat"]
   persones:
    - id: "adult"
      data_naixement: '1990-03-15'
-     ingressos_bruts:
-      2016: 6348
+     ingressos_bruts_ultims_sis_mesos: 1500
      es_orfe_dels_dos_progenitors: false
      es_victima_de_violencia_masclista: false
      es_divorciada_de_familia_reagrupada: true
@@ -248,12 +277,13 @@
      ingressat_en_centre_penitenciari: false
      en_els_ultims_12_mesos_ha_fet_baixa_voluntaria_de_la_feina: false
      inscrit_com_a_demandant_docupacio: true
+     situacio_laboral: aturat
    - id: "menor_discapacitat"
      data_naixement: '2008-03-15'
      grau_discapacitat: 33
      inscrit_com_a_demandant_docupacio: true
   output_variables:
-     GG_270_mensual: [ 100, 0 ]
+     GG_270_mensual: [ 586, 0 ]
 
 - name: "Familia monoparental amb contracte a temps parcial no inscrita al SOC reb l'ajuda"
   description: Ajuda lloguer just
@@ -265,11 +295,12 @@
      tipus_familia_monoparental: general
   unitats_de_convivencia:
      persones_que_conviuen: ["adult", "menor"]
+  families_fins_a_segon_grau:
+    familiars: ["adult", "menor"]
   persones:
    - id: "adult"
      data_naixement: '1980-03-15'
-     ingressos_bruts:
-      2016: 6348
+     ingressos_bruts_ultims_sis_mesos: 1500
      es_orfe_dels_dos_progenitors: false
      es_victima_de_violencia_masclista: false
      es_divorciada_de_familia_reagrupada: false
@@ -282,4 +313,4 @@
    - id: "menor"
      data_naixement: '2008-03-15'
   output_variables:
-     GG_270_mensual: [ 100, 0 ]
+     GG_270_mensual: [ 661, 0 ]
