--- a/openfisca_barcelona/tests/benefits/AE-230-1.yaml
+++ b/openfisca_barcelona/tests/benefits/AE-230-1.yaml
@@ -11,6 +11,8 @@
     tipus_custodia: compartida
   unitats_de_convivencia:
     persones_que_conviuen: ["pare1", "infant1"]
+  families_fins_a_segon_grau:
+    familiars: ["pare1", "infant1"]
   persones:
    - id: "pare1"
      edat: 57
