--- a/openfisca_barcelona/tests/benefits/GE-051-02.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-02.yaml
@@ -6,6 +6,8 @@
      adults: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
+  families_fins_a_segon_grau:
+    familiars: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -20,7 +22,7 @@
      ingressat_en_centre_penitenciari: false
      percep_prestacions_incompatibles_amb_la_feina: false
   output_variables:
-     GE_051_02_mensual: [ 426 ]
+     GE_051_02_mensual: [ 430 ]
 
 
 - name: "Persona menor de 45 anys NO reb l'ajuda"
@@ -31,6 +33,8 @@
      adults: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
+  families_fins_a_segon_grau:
+    familiars: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1980-01-01
@@ -56,6 +60,8 @@
      adults: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
+  families_fins_a_segon_grau:
+    familiars: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -80,6 +86,8 @@
      adults: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
+  families_fins_a_segon_grau:
+    familiars: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -105,6 +113,8 @@
      adults: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
+  families_fins_a_segon_grau:
+    familiars: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -130,6 +140,8 @@
      adults: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
+  families_fins_a_segon_grau:
+    familiars: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -154,6 +166,8 @@
      adults: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
+  families_fins_a_segon_grau:
+    familiars: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -179,6 +193,8 @@
      adults: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
+  families_fins_a_segon_grau:
+    familiars: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -203,6 +219,8 @@
      adults: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
+  families_fins_a_segon_grau:
+    familiars: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -227,6 +245,8 @@
      adults: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
+  families_fins_a_segon_grau:
+    familiars: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
@@ -252,6 +272,8 @@
      adults: ["adult1"]
   unitats_de_convivencia:
      persones_que_conviuen: ["adult1"]
+  families_fins_a_segon_grau:
+    familiars: ["adult1"]
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
